remove the transition from the buttons and fix link to jumpstart

--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -6,7 +6,6 @@
 	background: $third-brand-color;
 	border-radius: 3px;
 	border: 1px solid rgba(255,255,255,.5);
-	transition: .2s ease-in-out;
 }
 
 .button a:hover, input[type=submit]:hover {
